# backend/docs/swagger.json
@@ -387,6 +387,11 @@
         },
         "/api/growth-requests": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Возвращает все заявки с фильтрацией по статусу и дате",
                 "consumes": [
                     "application/json"
@@ -397,7 +402,7 @@
                 "tags": [
                     "growth_requests"
                 ],
-                "summary": "Получить список заявок на рост",
+                "summary": "Получить список заявок на рост 2",
                 "parameters": [
                     {
                         "type": "string",
@@ -1101,6 +1106,13 @@
                     "type": "boolean"
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "BearerAuth": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
